@@ -16,11 +16,15 @@
 
 ViewParams::ViewParams( )
 {
-    m_projection = Spherical;
+    // Default projection
+    m_projection    = Spherical;
     m_oldProjection = Spherical;
 
+    // Default view
     m_planetAxis = Quaternion( 1.0, 0.0, 0.0, 0.0 );
     m_radius     = 2000;
+    // FIXME: planetAxisUpdated, radiusUpdated
+    // FIXME: boundingBox
 
     // Show / don't show parameters
     m_showGrid           = true;
@@ -29,18 +33,21 @@ ViewParams::ViewParams( )
 
     m_showRelief         = true;
 
+    // Terrain features
     m_showIceLayer       = true;
     m_showBorders        = true;
     m_showRivers         = true;
     m_showLakes          = true;
 
+    // Placemarks
     m_showCities         = true;
     m_showTerrain        = true;
     m_showOtherPlaces    = true;
-    
+
+    // Other layers
     m_showGps            = false;
 
-    // Just to have something.
+    // Just to have something.  These will be resized anyway.
     m_canvasImage = new QImage( 10, 10, QImage::Format_ARGB32_Premultiplied );
     m_coastImage  = new QImage( 10, 10, QImage::Format_ARGB32_Premultiplied );
 }
@@ -48,7 +55,24 @@ ViewParams::ViewParams( )
 ViewParams::~ViewParams()
 {
     delete m_canvasImage;
-    delete m_coastImage;
     m_canvasImage = 0;
-    m_coastImage = 0;
+
+    delete m_coastImage;
+    m_coastImage  = 0;
+}
+
+
+void ViewParams::centerCoordinates( double &centerLon, double &centerLat )
+{
+    // Calculate translation of center point
+    centerLat = - m_planetAxis.pitch();
+    if ( centerLat > M_PI )
+        centerLat -= 2 * M_PI;
+
+    centerLon = + m_planetAxis.yaw();
+    if ( centerLon > M_PI )
+        centerLon -= 2 * M_PI;
+
+    // qDebug() << "centerLon" << centerLon * RAD2DEG;
+    // qDebug() << "centerLat" << centerLat * RAD2DEG;
 }
