@@ -1,5 +1,8 @@
 2008-02-07  Inge Wallin  <inge@lysator.liu.se>
 
+	More preparation
+	* src/lib/ViewParams.cpp: Cleaning
+
 	Cleaning and preparation for next step.
 	* src/lib/ClipPainter.{h,cpp}: Cleaning and documentation.
 
